--- a/index.html
+++ b/index.html
@@ -4,16 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="js/particle.js"></script>
-
+   
     <title>IOTPAGE</title>
 </head>
 <body>
-    <header>
-        <div id="particles-js"></div>
+  <!-- particles.js container -->
+<div id="particles-js"></div>
 
-    </header>
+<!-- stats - count particles -->
+<div class="wrapper">
+<div class="column">
+    <img src="img/logo.png" alt="">
+    <h1>Best for criptocurrency.</h1>
+    <h4>All tools you need to drive a Cryptocurrency business Web Site</h4>
+    <a href=""> <div class="button">View Demo</div></a>
+
+</div>
+
+<div class="column"><img class ="banner"src="img/land1.png" alt="">
+
+</div>
     
+</div>
+<div class="stats">
+    <ol class="stats-values">
+        <il>859+ </il>
+        <il>678+ </il>
+        <il>345+ </il>
+        <il>209+ </il>
+    </ol>
+
+</div>
+<div class="pru">pru</div>
+
+
+<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
+    <!-- scripts -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
     
 </body>
+
 </html>
