--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
 
-        <title>IOTPAGE</title>
+        <title>Gitloops</title>
     </head>
     <body>
         <!-- particles.js container -->
@@ -27,19 +29,141 @@
                 <img class="banner" src="img/land1.png" alt="" />
             </div>
         </div>
-        <div class="stats">
-            <ol class="stats-values">
-                <il>859+ </il>
-                <il>678+ </il>
-                <il>345+ </il>
-                <il>209+ </il>
-            </ol>
-        </div>
-        <div class="pru">pru</div>
 
-        <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
-        <!-- scripts -->
-        <script src="js/particles.js"></script>
-        <script src="js/app.js"></script>
+        <!-- #3cards -->
+
+        <div class="flex-container">
+            <div class="flex-item" data-aos="fade-right">
+                <h1>Juntémonos y veamos que necesitas</h1>
+                <p>
+                    Parte primordial de nuestro trabajo es entender tu negocio y
+                    tus objetivos. Así podremos definir el plan de acción.
+                </p>
+            </div>
+            <div class="flex-item" data-aos="fade-left">
+                <img src="img/banda.webp" alt="" />
+            </div>
+        </div>
+
+        <!-- Descubre lo q hacemos -->
+        <div class="descubre">
+            <h2>Descubre lo que hacemos</h2>
+            <h5>
+                Día a día ponemos todo nuestro talento en hacer a tu empresa
+                competitiva en los canales digitales
+            </h5>
+        </div>
+        <div class="flex-container2">
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo1.gif" />
+                <h1>Diseño y Programación Web</h1>
+                <p>
+                    Optimizamos cada proyecto de diseño hacia la conversión, y
+                    no sólo en términos gráficos, cuidamos cada aspecto del
+                    diseño: Código, UX experiencia de usuario, llamadas a la
+                    acción, redacción de textos, velocidad de carga e interface.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo2.gif " />
+                <h1>Posicionamiento web (SEO)</h1>
+                <p>
+                    Así es el mundo hoy: los usuarios "Googlean" absolutamente
+                    todo, y asegurarnos de aparecer en esas búsquedas es estar
+                    más cerca de nuestros clientes. Con Lemon aseguras estar en
+                    primeras posiciones en Google y otros buscadores, que es
+                    donde tus clientes realmente buscan.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo3.gif" />
+                <h1>Márketing de Contenidos</h1>
+                <p>
+                    En la era 2.0 el contenido es el rey. Nos enfrentamos a un
+                    mundo lleno de información al alcance de un click, donde los
+                    usuarios toman decisiones informadas. Esta estrategia educa,
+                    convence y fideliza a tus usuarios para que adquieran tus
+                    productos o servicios.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo4.gif" />
+                <h1>Campañas de Anuncios</h1>
+                <p>
+                    Utilizamos estrategias SEM (Anuncios en Google) y en otras
+                    redes sociales para adquirir nuevos clientes o generar
+                    ventas. Llegamos a la audiencia adecuada, utilizando el
+                    canal correcto y el mensaje clave que multiplicará tus
+                    resultados digitales. Utilizamos técnicas mixtas que
+                    ayudarán a destacar tu empresa, mejorar tus conversiones a
+                    la vez que mejoras tu presencia digital.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo5.gif" />
+                <h1>Estrategias Social Media</h1>
+                <p>
+                    Nos encargamos de tus redes sociales, sin duda plataformas
+                    que revolucionaron el mundo y la manera de conectar empresas
+                    con usuarios. Utilizamos un framework exclusivo que nos
+                    permite abarcar todo el ciclo de vida de tu nicho de mercado
+                    con mensaje que los llevarán de un simple like a ser los
+                    embajadores de tu marca.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+            <div class="flex-item-sec" data-aos="fade-up">
+                <img src="img/blo6.gif" />
+                <h1>Email Marketing</h1>
+                <p>
+                    El Email Marketing continúa siendo una estrategia muy
+                    vigente. Dentro del Marketing Digital, continúa siendo una
+                    de las mejores herramientas para conectar con usuarios
+                    claves, ya que permiten automatización a la audiencia
+                    correcta para entender e impactar en su ciclo de compra.
+                </p>
+                <div class="button"><a href="#">Conoce más</a></div>
+            </div>
+        </div>
+        <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
+            <img src="img/wasap.png" alt="" />
+        </a>
+        <!-- GetButton.io widget -->
+        <!--<script type="text/javascript">
+            (function () {
+                var options = {
+                    whatsapp: "+593 963835646", // WhatsApp number
+                    call_to_action: "Escribenos", // Call to action
+                    position: "right", // Position may be 'right' or 'left'
+                };
+                var proto = document.location.protocol,
+                    host = "getbutton.io",
+                    url = proto + "//static." + host;
+                var s = document.createElement("script");
+                s.type = "text/javascript";
+                s.async = true;
+                s.src = url + "/widget-send-button/js/init.js";
+                s.onload = function () {
+                    WhWidgetSendButton.init(host, proto, options);
+                };
+                var x = document.getElementsByTagName("script")[0];
+                x.parentNode.insertBefore(s, x);
+            })();
+        </script> -->
+        <!-- /GetButton.io widget -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                once: true,
+                duration: 1500,
+            });
+        </script>
     </body>
+    <!-- scripts -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 </html>
