--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="The Rock" />
+        <meta property="og:type" content="video.movie" />
+        <meta
+            property="og:url"
+            content="https://www.imdb.com/title/tt0117500/"
+        />
+        <meta
+            property="og:image"
+            content="https://ia.media-imdb.com/images/rock.jpg"
+        />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
