--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
         <meta
             property="og:image"
-            content="https://ia.media-imdb.com/images/rock.jpg"
+            content="https://erwing23.github.io/IoTpage/img/logo2.png"
         />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
