--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
             property="og:url"
             content="https://www.imdb.com/title/tt0117500/"
         />
-        <meta
-            property="og:image"
-            content="https://erwing23.github.io/IoTpage/img/logo2.png"
-        />
+        <meta property="og:image" content="https://ogp.me/logo.png" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
