--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
             property="og:url"
             content="https://www.imdb.com/title/tt0117500/"
         />
-        <meta property="og:image" content="https://ogp.me/logo.png" />
+        <meta property="og:image" content="https://i.imgur.com/4wmXGem.jpg" />
+        <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
+        <link rel="icon" href="img/icono.ico" type="image/x-icon" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
@@ -24,16 +26,18 @@
         <div class="wrapper">
             <div class="column">
                 <img src="img/logo2.png" alt="" />
-                <h1>Best for criptocurrency.</h1>
-                <h4>
-                    All tools you need to drive a Cryptocurrency business Web
-                    Site
-                </h4>
-                <a href=""> <div class="button">View Demo</div></a>
+                <div class="left">
+                    <h1>Best for criptocurrency.</h1>
+                    <h4>
+                        All tools you need to drive a Cryptocurrency business
+                        Web Site
+                    </h4>
+                    <a href=""> <div class="button">View Demo</div></a>
+                </div>
             </div>
 
-            <div class="column">
-                <img class="banner" src="img/land1.png" alt="" />
+            <div id="banner">
+                <img src="img/land1.png" alt="" />
             </div>
         </div>
 
@@ -70,7 +74,7 @@
                     diseño: Código, UX experiencia de usuario, llamadas a la
                     acción, redacción de textos, velocidad de carga e interface.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo2.gif " />
@@ -82,7 +86,7 @@
                     primeras posiciones en Google y otros buscadores, que es
                     donde tus clientes realmente buscan.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo3.gif" />
@@ -94,7 +98,7 @@
                     convence y fideliza a tus usuarios para que adquieran tus
                     productos o servicios.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo4.gif" />
@@ -108,7 +112,7 @@
                     ayudarán a destacar tu empresa, mejorar tus conversiones a
                     la vez que mejoras tu presencia digital.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo5.gif" />
@@ -121,7 +125,7 @@
                     con mensaje que los llevarán de un simple like a ser los
                     embajadores de tu marca.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo6.gif" />
@@ -133,7 +137,7 @@
                     claves, ya que permiten automatización a la audiencia
                     correcta para entender e impactar en su ciclo de compra.
                 </p>
-                <div class="button"><a href="#">Conoce más</a></div>
+                <div class="button2"><a href="#">Conoce más</a></div>
             </div>
         </div>
         <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
