--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <!-- #3cards -->
 
         <div class="flex-container">
-            <div class="flex-item" data-aos="fade-right">
+            <div class="flex-item" data-aos="fade-right" data-aos-offset="300">
                 <h1>Juntémonos y veamos que necesitas</h1>
                 <p>
                     Parte primordial de nuestro trabajo es entender tu negocio y
                     tus objetivos. Así podremos definir el plan de acción.
                 </p>
             </div>
-            <div class="flex-item" data-aos="fade-left">
+            <div class="flex-item" data-aos="fade-left" data-aos-offset="200">
                 <img src="img/banda.webp" alt="" />
             </div>
         </div>
