timeline and contactos and responsive

--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="The Rock" />
+        <meta property="og:title" content="Gitloops" />
         <meta property="og:type" content="video.movie" />
+        <meta property="og:url" content="http://gitloops.com/" />
         <meta
-            property="og:url"
-            content="https://www.imdb.com/title/tt0117500/"
+            property="og:description"
+            content="Página de Desarrollo una locura"
         />
         <meta property="og:image" content="https://i.imgur.com/4wmXGem.jpg" />
         <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
         <link rel="icon" href="img/icono.ico" type="image/x-icon" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+            crossorigin="anonymous"
+        />
         <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
 
         <title>Gitloops</title>
@@ -140,6 +147,87 @@
                 <div class="button2"><a href="#">Conoce más</a></div>
             </div>
         </div>
+
+        <div class="timeline">
+            <div class="iconos">
+                <div class="iconcon">
+                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
+                </div>
+                <div class="iconcon">
+                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
+                </div>
+                <div class="iconcon">
+                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
+                </div>
+                <div class="iconcon">
+                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
+                </div>
+                <div class="iconcon">
+                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
+                </div>
+            </div>
+            <div class="center-line"></div>
+            <div class="row row-1">
+                <div class="bloq-1"></div>
+                <section>
+                    <div class="details">
+                        <h2>Soporte</h2>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    </div>
+                </section>
+            </div>
+            <div class="row row-2">
+                <div class="bloq-2"></div>
+                <section>
+                    <div class="details">
+                        <h2>Tecnología</h2>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    </div>
+                </section>
+            </div>
+            <div class="row row-1">
+                <div class="bloq-1"></div>
+                <section>
+                    <div class="details">
+                        <h2>Soporte</h2>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    </div>
+                </section>
+            </div>
+            <div class="row row-2">
+                <div class="bloq-2"></div>
+
+                <section>
+                    <div class="details">
+                        <h2>Tecnología</h2>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    </div>
+                </section>
+            </div>
+            <div class="row row-1">
+                <div class="bloq-1"></div>
+                <section>
+                    <div class="details">
+                        <h2>Soporte</h2>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="clientes">
+            <h2>Clientes que han confiado en Gitloops</h2>
+            <ul>
+                <li>
+                    <img
+                        src="https://images.squarespace-cdn.com/content/v1/5cd12023fd67933883a42711/1592021113622-P3PVBI0XQSGJ9VBG3GPT/ke17ZwdGBToddI8pDm48kIu1QHqWqYcqSXGQukjVMYR7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0nTmq4t20SVBEeP1hbZbF3p0qWlzeoQAyZPk2qJaMlJDYnGVeje1wcxYJ6ka56sIZA/AFICHE+LAS+ALBAS+222-37.png"
+                        alt=""
+                    />
+                </li>
+
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
         <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
             <img src="img/wasap.png" alt="" />
         </a>
@@ -166,6 +254,11 @@
             })();
         </script> -->
         <!-- /GetButton.io widget -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/js/all.min.js"
+            integrity="sha512-UwcC/iaz5ziHX7V6LjSKaXgCuRRqbTp1QHpbOJ4l1nw2/boCfZ2KlFIqBUA/uRVF0onbREnY9do8rM/uT/ilqw=="
+            crossorigin="anonymous"
+        ></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init({
