--- a/index.html
+++ b/index.html
@@ -30,21 +30,19 @@
         <div id="particles-js"></div>
 
         <!-- stats - count particles -->
+
         <div class="wrapper">
             <div class="column">
                 <img src="img/logo2.png" alt="" />
                 <div class="left">
-                    <h1>Best for criptocurrency.</h1>
-                    <h4>
-                        All tools you need to drive a Cryptocurrency business
-                        Web Site
-                    </h4>
-                    <a href=""> <div class="button">View Demo</div></a>
+                    <h1>Todo listo para empezar a vender</h1>
+
+                    <a href=""> <div class="button">Cotizar proyecto</div></a>
                 </div>
             </div>
 
             <div id="banner">
-                <img src="img/land1.png" alt="" />
+                <img src="img/land2.png" alt="" />
             </div>
         </div>
 
