--- a/index.html
+++ b/index.html
@@ -52,22 +52,18 @@
             <div class="flex-item" data-aos="fade-right" data-aos-offset="300">
                 <h1>Juntémonos y veamos que necesitas</h1>
                 <p>
-                    Parte primordial de nuestro trabajo es entender tu negocio y
-                    tus objetivos. Así podremos definir el plan de acción.
+                    Nuestro trabajo es entender tu negocio y tus objetivos.<br />
+                    Así podremos definir el plan de acción.
                 </p>
             </div>
             <div class="flex-item" data-aos="fade-left" data-aos-offset="200">
-                <img src="img/banda.webp" alt="" />
+                <img src="img/banda.png" alt="" />
             </div>
         </div>
 
         <!-- Descubre lo q hacemos -->
         <div class="descubre">
-            <h2>Descubre lo que hacemos</h2>
-            <h5>
-                Día a día ponemos todo nuestro talento en hacer a tu empresa
-                competitiva en los canales digitales
-            </h5>
+            <h2>Que hacemos</h2>
         </div>
         <div class="flex-container2">
             <div class="flex-item-sec" data-aos="fade-up">
@@ -145,8 +141,9 @@
                 <div class="button2"><a href="#">Conoce más</a></div>
             </div>
         </div>
-
+        <div class="como"><h1>Como lo hacemos</h1></div>
         <div class="timeline">
+            <div class="back">Gitloops</div>
             <div class="iconos">
                 <div class="iconcon">
                     <div class="padre"><i class="icon fas fa-adjust"></i></div>
