--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </ul>
         </div>
         <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
-            <img src="img/wasap.png" alt="" />
+            <img src="img/wasap.svg" alt="" />
         </a>
         <!-- GetButton.io widget -->
         <!--<script type="text/javascript">
