--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
         <div id="particles-js"></div>
 
         <!-- stats - count particles -->
-
+        <div class="ver">
+            <div>
+                Icons made by
+                <a
+                    href="https://www.flaticon.com/authors/roundicons"
+                    title="Roundicons"
+                    >Roundicons</a
+                >
+                from
+                <a href="https://www.flaticon.com/" title="Flaticon"
+                    >www.flaticon.com</a
+                >
+            </div>
+        </div>
+        <div class="arrow bounce">
+            <p><a href="#desc">Ver más</a></p>
+            <a href="#desc"> <img src="img/down-arrow.png" alt="" /></a>
+        </div>
         <div class="wrapper">
             <div class="column">
                 <img src="img/logo2.png" alt="" />
@@ -48,7 +65,7 @@
 
         <!-- #3cards -->
 
-        <div class="flex-container">
+        <div class="flex-container" id="desc">
             <div class="flex-item" data-aos="fade-right" data-aos-offset="300">
                 <h1>Juntémonos y veamos que necesitas</h1>
                 <p>
@@ -141,72 +158,99 @@
                 <div class="button2"><a href="#">Conoce más</a></div>
             </div>
         </div>
-        <div class="como"><h1>Como lo hacemos</h1></div>
-        <div class="timeline">
-            <div class="back">Gitloops</div>
-            <div class="iconos">
-                <div class="iconcon">
-                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
-                </div>
-                <div class="iconcon">
-                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
-                </div>
-                <div class="iconcon">
-                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
-                </div>
-                <div class="iconcon">
-                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
-                </div>
-                <div class="iconcon">
-                    <div class="padre"><i class="icon fas fa-adjust"></i></div>
-                </div>
-            </div>
-            <div class="center-line"></div>
-            <div class="row row-1">
-                <div class="bloq-1"></div>
-                <section>
-                    <div class="details">
-                        <h2>Soporte</h2>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+        <div class="contenedor">
+            <div class="como"><h1>Como lo hacemos</h1></div>
+            <div class="timeline">
+                <div class="back">Gitloops</div>
+                <div class="iconos">
+                    <div class="iconcon">
+                        <div class="padre">
+                            <i class="icon fas fa-adjust"></i>
+                        </div>
                     </div>
-                </section>
-            </div>
-            <div class="row row-2">
-                <div class="bloq-2"></div>
-                <section>
-                    <div class="details">
-                        <h2>Tecnología</h2>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    <div class="iconcon">
+                        <div class="padre">
+                            <i class="icon fas fa-adjust"></i>
+                        </div>
                     </div>
-                </section>
-            </div>
-            <div class="row row-1">
-                <div class="bloq-1"></div>
-                <section>
-                    <div class="details">
-                        <h2>Soporte</h2>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
+                    <div class="iconcon">
+                        <div class="padre">
+                            <i class="icon fas fa-adjust"></i>
+                        </div>
                     </div>
-                </section>
-            </div>
-            <div class="row row-2">
-                <div class="bloq-2"></div>
+                    <div class="iconcon">
+                        <div class="padre">
+                            <i class="icon fas fa-adjust"></i>
+                        </div>
+                    </div>
+                    <div class="iconcon">
+                        <div class="padre">
+                            <i class="icon fas fa-adjust"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="center-line"></div>
+                <div class="row row-1">
+                    <div class="bloq-1"></div>
+                    <section>
+                        <div class="details">
+                            <h2>Soporte</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                                sit
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <div class="row row-2">
+                    <div class="bloq-2"></div>
+                    <section>
+                        <div class="details">
+                            <h2>Tecnología</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                                sit
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <div class="row row-1">
+                    <div class="bloq-1"></div>
+                    <section>
+                        <div class="details">
+                            <h2>Soporte</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                                sit
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <div class="row row-2">
+                    <div class="bloq-2"></div>
 
-                <section>
-                    <div class="details">
-                        <h2>Tecnología</h2>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
-                    </div>
-                </section>
-            </div>
-            <div class="row row-1">
-                <div class="bloq-1"></div>
-                <section>
-                    <div class="details">
-                        <h2>Soporte</h2>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</p>
-                    </div>
-                </section>
+                    <section>
+                        <div class="details">
+                            <h2>Tecnología</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                                sit
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <div class="row row-1">
+                    <div class="bloq-1"></div>
+                    <section>
+                        <div class="details">
+                            <h2>Soporte</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                                sit
+                            </p>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
         <div class="clientes">
@@ -224,7 +268,7 @@
             </ul>
         </div>
         <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
-            <img src="img/wasap.svg" alt="" />
+            <img src="img/wasap.png" alt="" />
         </a>
         <!-- GetButton.io widget -->
         <!--<script type="text/javascript">
