--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     diseño: Código, UX experiencia de usuario, llamadas a la
                     acción, redacción de textos, velocidad de carga e interface.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo2.gif " />
@@ -104,7 +104,7 @@
                     primeras posiciones en Google y otros buscadores, que es
                     donde tus clientes realmente buscan.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo3.gif" />
@@ -116,7 +116,7 @@
                     convence y fideliza a tus usuarios para que adquieran tus
                     productos o servicios.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo4.gif" />
@@ -130,7 +130,7 @@
                     ayudarán a destacar tu empresa, mejorar tus conversiones a
                     la vez que mejoras tu presencia digital.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo5.gif" />
@@ -143,7 +143,7 @@
                     con mensaje que los llevarán de un simple like a ser los
                     embajadores de tu marca.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo6.gif" />
@@ -155,7 +155,7 @@
                     claves, ya que permiten automatización a la audiencia
                     correcta para entender e impactar en su ciclo de compra.
                 </p>
-                <div class="button2"><a href="#">Conoce más</a></div>
+                <a href="#" class="button2"> Conoce más</a>
             </div>
         </div>
         <div class="contenedor">
