--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="left">
                     <h1>Todo listo para empezar a vender</h1>
 
-                    <a href=""> <div class="button">Cotizar proyecto</div></a>
+                    <a href=""> <div class="button bounce-left">Cotizar proyecto</div></a>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
             </div>
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo3.gif" />
-                <h1>Márketing de Contenidos</h1>
+                <h1>E-Commerce</h1>
                 <p>
                     En la era 2.0 el contenido es el rey. Nos enfrentamos a un
                     mundo lleno de información al alcance de un click, donde los
@@ -118,6 +118,7 @@
                 </p>
                 <a href="#" class="button2"> Conoce más</a>
             </div>
+            <!--
             <div class="flex-item-sec" data-aos="fade-up">
                 <img src="img/blo4.gif" />
                 <h1>Campañas de Anuncios</h1>
@@ -156,6 +157,7 @@
                     correcta para entender e impactar en su ciclo de compra.
                 </p>
                 <a href="#" class="button2"> Conoce más</a>
+                -->>
             </div>
         </div>
         <div class="contenedor">
@@ -253,6 +255,7 @@
                 </div>
             </div>
         </div>
+
         <div class="clientes">
             <h2>Clientes que han confiado en Gitloops</h2>
             <ul>
